@@ -56,4 +56,6 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+
+	jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 }
